# eai-taxonomy

./: README.md  pyproject.toml  requirements.txt
src/eai_taxonomy/: __init__.py
src/eai_taxonomy/annotation/: README.md  agreement.py  annotation.py  nmi.py  test_annotation.py
src/eai_taxonomy/annotation/annotation_examples/: qwen_2p5_32b_instruct_annotation_example.txt
src/eai_taxonomy/annotation/prompts/: annotation_pass_1.txt  annotation_pass_2.txt  annotation_system_prompt.txt
src/eai_taxonomy/notebooks/: eai_taxonomy_med_w_dclm.ipynb  eai_taxonomy_stem_w_dclm.ipynb  eai_taxonomy_top_math.ipynb
