[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eai-taxonomy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyspark-huggingface>=1.0.0",
    "pyspark>=4.0.0",
    "transformers>=4.50.3",
    "pandas>=2.3.0",
    "numpy>=2.3.0",
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["src"]
